# cpp-sqlite

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: config.hpp  handle.h  sqlite.h
src/: 01_first_look.cpp  02_handling_resources.cpp  03_statements.cpp  CMakeLists.txt  test_connect.cpp
